--- a/styles/main.css
+++ b/styles/main.css
@@ -1,25 +1,12 @@
-footer{
-    position: fixed;
-    bottom: 0px;
-    left: 0px;  
-    width: 100%;
-    
-    background-color: #d9d9d9;
+body {
+    display: grid;
+    grid-area: auto;
 }
 
-.footerButton {
-    margin-left: 25px;
-    margin-right: 25px;
-    margin-bottom: 10px;
-    margin-top: 10px;
-    padding: 0;
-    border: none;
-    text-decoration: none;
-}
 
 nav {
     width: 100%;
-    position: fixed;
+    /* position: fixed; */
     top: 20px;
 }
 
@@ -35,4 +22,22 @@ nav {
     padding: 14px 0;
     margin-left: 20px;
     font-size: 30px;
+}
+
+footer{
+    position: fixed;
+    bottom: 0px;
+    left: 0px;  
+    width: 100%;
+    background-color: #d9d9d9;
+}
+
+.footerButton {
+    margin-left: 25px;
+    margin-right: 25px;
+    margin-bottom: 10px;
+    margin-top: 10px;
+    padding: 0;
+    border: none;
+    text-decoration: none;
 }
