--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -8,26 +8,27 @@
     <!--Contents in the body tag-->
     <img class="title" src="/img/FitnessLogo.png" alt="logo">
     <div class="container taskCards">
-
+        <h1>Points: <%= points %></h1>
+        <br> <a href="/main"><button class="btn btn-secondary float-right">Main Page</button></a>
         <div class="card">
             <div class="card-body">
                 <%= task1 %>
             </div>
-            <p><button class="btn btn-secondary float-right" type="submit">Done</button> <button
+            <p><form method="post" action="/addPointFit"><button class="btn btn-secondary float-right" type="submit">Done</button></form><button
                     class="btn btn-secondary float-right" type="submit">Reroll</button></p>
         </div>
         <div class="card">
             <div class="card-body">
                 <%= task2 %>
             </div>
-            <p><button class="btn btn-secondary float-right" type="submit">Done</button> <button
+            <p><form method="post" action="/addPointFit"><button class="btn btn-secondary float-right" type="submit">Done</button></form> <button
                     class="btn btn-secondary float-right" type="submit">Reroll</button></p>
         </div>
         <div class="card">
             <div class="card-body">
                 <%= task3 %>
             </div>
-            <p><button class="btn btn-secondary float-right" type="submit">Done</button> <button
+            <p><form method="post" action="/addPointFit"><button class="btn btn-secondary float-right" type="submit">Done</button></form> <button
                     class="btn btn-secondary float-right" type="submit">Reroll</button></p>
         </div>
 
