Removed main button on fitTasks.

--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -4,7 +4,7 @@
     <a href="index.html">
       <input type="image" class="footerButton" src="../img/23-user-group.svg">
     </a>
-    <a href="index.html">
+    <a href="/main">
       <input type="image" class="footerButton" src="../img/35-home-general.svg">
     </a>
     <a href="index.html">
