--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -8,9 +8,7 @@
     <!--Contents in the body tag-->
     <img class="title" src="/img/FitnessLogo.png" alt="logo">
     <div class="container taskCards">
-        <h1>Points: <%= points %> <a href="/main"><button class="btn btn-secondary float-right">Main Page</button></a>
-        </h1>
-        <br>
+        <h1>Points: <%= points %></h1>
         <div class="card">
             <div class="card-body">
                 <%= task1 %>
