made reroll button work

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -29,6 +29,7 @@
     <div class="col-lg-6 mx-auto">
       <div class="navText">
         <h1>Points:<%= points %></h1>
+        <h1><%= rank %></h1>
       </div>
       
     </div>
