--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -18,7 +18,7 @@
                 <form method="post" action="/addPointFit" style="display: inline">
                     <button class="btn btn-secondary float-right" type="submit">Done</button>
                 </form>
-                <form style="display: inline">
+                <form method="post" action="/rerollFit1" style="display: inline">
                     <button class="btn btn-secondary float-right" type="submit">Reroll</button>
                 </form>
             </span>
@@ -27,19 +27,27 @@
             <div class="card-body">
                 <%= task2 %>
             </div>
-            <p>
-            <form method="post" action="/addPointFit"><button class="btn btn-secondary float-right"
-                    type="submit">Done</button></form> <button class="btn btn-secondary float-right"
-                type="submit">Reroll</button></p>
+            <span>
+                <form method="post" action="/addPointFit" style="display: inline">
+                    <button class="btn btn-secondary float-right" type="submit">Done</button>
+                </form>
+                <form style="display: inline">
+                    <button class="btn btn-secondary float-right" type="submit">Reroll</button>
+                </form>
+            </span>
         </div>
         <div class="card">
             <div class="card-body">
                 <%= task3 %>
             </div>
-            <p>
-            <form method="post" action="/addPointFit"><button class="btn btn-secondary float-right"
-                    type="submit">Done</button></form> <button class="btn btn-secondary float-right"
-                type="submit">Reroll</button></p>
+            <span>
+                <form method="post" action="/addPointFit" style="display: inline">
+                    <button class="btn btn-secondary float-right" type="submit">Done</button>
+                </form>
+                <form style="display: inline">
+                    <button class="btn btn-secondary float-right" type="submit">Reroll</button>
+                </form>
+            </span>
         </div>
 
     </div>
