Completed merge of John and Declan branches

--- a/views/fitTasks.ejs
+++ b/views/fitTasks.ejs
@@ -31,7 +31,7 @@
                 <form method="post" action="/addPointFit" style="display: inline">
                     <button class="btn btn-secondary float-right" type="submit">Done</button>
                 </form>
-                <form style="display: inline">
+                <form method="post" action="/rerollFit2" style="display: inline">
                     <button class="btn btn-secondary float-right" type="submit">Reroll</button>
                 </form>
             </span>
@@ -44,7 +44,7 @@
                 <form method="post" action="/addPointFit" style="display: inline">
                     <button class="btn btn-secondary float-right" type="submit">Done</button>
                 </form>
-                <form style="display: inline">
+                <form method="post" action="/rerollFit3" style="display: inline">
                     <button class="btn btn-secondary float-right" type="submit">Reroll</button>
                 </form>
             </span>
