--- a/styles/tasks.css
+++ b/styles/tasks.css
@@ -125,6 +125,8 @@ td {
     text-align: left;
 }
 
+
+
 .name {
     text-align: left;
     font-size: 1.2rem;
@@ -284,4 +286,15 @@ footer {
 
 .inline {
     display: inline;
+}
+
+.skibidi {
+    padding-left:45px;
+    font-size: 30px;
+}
+
+.signUpImage {
+    padding-top: 40px;
+    padding-left: 45px;
+    padding-bottom: 20px;
 }
