--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,3 +1,15 @@
 <%- include("templates/header") %>
+<div class="signUpImage">
+    <img src="/img/Comp2800Logo.png" alt="logo">
+</div>
 
+<div class="skibidi">
+    <h1>Sign Up</h1>
+            <form action="/signup" method="POST">
+            <input type="text" name="username" placeholder="Username"><br>
+            <input type="email" name="email" placeholder="Email"><br>
+            <input type="password" name="password" placeholder="Password"><br>
+            <button type="submit">Sign Up</button>
+            </form>
+</div>
 <%- include("templates/end") %>
