Fixed MOST git conflicts

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -5,10 +5,10 @@
     <a href="fitTasks">
       <input type="image" class="navButton" src="../img/FitnessButton.png">
     </a>
-    <a href="index.html">
+    <a href="fitTasks">
       <input type="image" class="navButton" src="../img/EcoButton.png">
     </a>
-    <a href="index.html">
+    <a href="fitTasks">
       <input type="image" class="navButton" src="../img/DietButton.png">
     </a>
   </nav>
