Make login page bigger font.

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -47,11 +47,12 @@
     <!-- <h1 id="welcome-msg" class="display-5 fw-bold">Welcome to Farmify</h1>
     <p class="col-md-8 fs-4">Where we bring farms to you!</p><br /><br /> -->
   </div>
-  
+  <div class="login">
   <h1>Login</h1>
     <form action="/login" method="POST">
       <input type="email" name="email" placeholder="Email">
       <input type="password" name="password" placeholder="Password">
       <button type="submit">Login</button>
     </form>
+    </div>
 <%- include("templates/end") %>
