--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -32,7 +32,7 @@
 
   <!-- Link to styles of our own -->
   <link rel="stylesheet" type="text/css" href="../styles/tasks.css" text="">
-
+  <link rel="stylesheet" href="../styles/style.css">
 </head>
 
 <body>
