--- a/styles/style.css
+++ b/styles/style.css
@@ -32,3 +32,33 @@
     margin-bottom: 60px;
 }
 
+.center {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%;
+}
+
+.index-form {
+    padding: 12px 24px;
+    font-size: 16px;
+    
+}
+
+.index-btn {
+    border-radius: 25px;
+    margin-top: 20px;
+    width: 40%;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    text-align: center;
+    text-decoration: none;
+    margin-right: 200px;
+    color: rgb(255, 255, 255);
+    font-size: 20px;
+    background-color: #3ede54;
+    border: none;
+    cursor: pointer;
+    transition-duration: 0.4s;
+}
+
