--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,15 +1,18 @@
 <%- include("templates/header") %>
-<div class="title">
-    <img src="/img/Logo.png" alt="logo" width="500" height="500">
-</div>
+  <div class="title" class="center">
+    <img src="/img/Logo.png" alt="logo" width="250" height="250">
+  </div>
 
-<div class="p-5 mb-4 bg-light rounded-3" style="display:flex; justify-content:center;">
+  <div class="p-5 mb-4 bg-light rounded-3" style="display:flex; justify-content:center;">
     <div class="container-fluid py-5">
       <!-- <h1 class="display-5 fw-bold">FitUp</h1> -->
-      <a href="/login"><button id="login-btn" class="btn"
-        type="button">Login</button></a><br /><br /><br /><br />
-      <a href="/signup"><button id="login-btn" class="btn"
-        type="button">Signup</button></a><br /><br /><br /><br />
+      <form action="/login" method="get" class="index-form">
+        <button type="submit" class="index-btn btn">Login</button>
+      </form>
+
+      <form action="/signup" method="get" class="index-form">
+        <button type="submit" class="index-btn btn">Signup</button>
+      </form>
     </div>
   </div>
-<%- include("templates/end") %>
+  <%- include("templates/end") %>
