--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,3 +1,18 @@
 <%- include("templates/header") %>
+    <div class="title" class="center">
+        <img src="/img/Logo.png" alt="logo" width="250" height="250">
+    </div>
 
-<%- include("templates/end") %>
+    <div>
+        <form action="/signup" method="POST" class="center index-form">
+            <h1>Sign Up</h1>
+            <input type="text" name="username" placeholder="Username">
+            <br><br>
+            <input type="email" name="email" placeholder="Email">
+            <br><br>
+            <input type="password" name="password" placeholder="Password">
+            <br><br>
+            <button class="index-btn btn" type="submit">Sign Up</button>
+        </form>
+    </div>
+    <%- include("templates/end") %>
