Styled login and signup

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -31,8 +31,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
   <!-- Link to styles of our own -->
-  <link rel="stylesheet" type="text/css" href="../styles/tasks.css" text="">
-  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" type="text/css" href="/styles/tasks.css" text="">
+
 </head>
 
 <body>
