--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,18 +1,15 @@
 <%- include("templates/header") %>
-    <div class="title" class="center">
-        <img src="/img/Logo.png" alt="logo" width="250" height="250">
-    </div>
+<div class="signUpImage">
+    <img src="/img/Comp2800Logo.png" alt="logo">
+</div>
 
-    <div>
-        <form action="/signup" method="POST" class="center index-form">
-            <h1>Sign Up</h1>
-            <input type="text" name="username" placeholder="Username">
-            <br><br>
-            <input type="email" name="email" placeholder="Email">
-            <br><br>
-            <input type="password" name="password" placeholder="Password">
-            <br><br>
-            <button class="index-btn btn" type="submit">Sign Up</button>
-        </form>
-    </div>
-    <%- include("templates/end") %>
+<div class="skibidi">
+    <h1>Sign Up</h1>
+            <form action="/signup" method="POST">
+            <input type="text" name="username" placeholder="Username"><br>
+            <input type="email" name="email" placeholder="Email"><br>
+            <input type="password" name="password" placeholder="Password"><br>
+            <button type="submit">Sign Up</button>
+            </form>
+</div>
+<%- include("templates/end") %>
