Styled main a bit

--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -31,7 +31,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
   <!-- Link to styles of our own -->
-  <link rel="stylesheet" type="text/css" href="/styles/tasks.css" text="">
+  <link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
 
 </head>
 
