--- a/styles/style.css
+++ b/styles/style.css
@@ -39,6 +39,10 @@
   width: 50%;
 }
 
+.login {
+    font-size: 30px;
+}
+
 .index-form {
     padding: 12px 24px;
     font-size: 16px;
@@ -55,7 +59,7 @@
     text-decoration: none;
     margin-right: 200px;
     color: rgb(255, 255, 255);
-    font-size: 20px;
+    font-size: 15px;
     background-color: #3ede54;
     border: none;
     cursor: pointer;
