--- a/views/index.ejs
+++ b/views/index.ejs
@@ -3,16 +3,14 @@
     <img src="/img/Logo.png" alt="logo" width="250" height="250">
   </div>
 
-  <div class="p-5 mb-4 bg-light rounded-3" style="display:flex; justify-content:center;">
-    <div class="container-fluid py-5">
-      <!-- <h1 class="display-5 fw-bold">FitUp</h1> -->
+<div class="login bg-light">
+    <br>
       <form action="/login" method="get" class="index-form">
-        <button type="submit" class="index-btn btn">Login</button>
+        <button type="submit" class="index-btn">Login</button>
       </form>
 
       <form action="/signup" method="get" class="index-form">
-        <button type="submit" class="index-btn btn">Signup</button>
+        <button type="submit" class="index-btn">Signup</button>
       </form>
-    </div>
   </div>
   <%- include("templates/end") %>
