--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,58 +1,16 @@
 <%- include("templates/header") %>
-<nav class="navbar fixed-top ">
-    <div class="container-fluid">
-      <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
-        aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-        <div class="offcanvas-header">
-          <h5 class="offcanvas-title" id="offcanvasNavbarLabel">More Information</h5>
-          <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-        </div>
-        <div class="offcanvas-body">
-          <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="AboutUs.html">About Us</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                aria-expanded="false">
-                More
-              </a>
-              <ul class="dropdown-menu">
-                <li><a class="dropdown-item" href="#">Account Setting</a></li>
-                <li><a class="dropdown-item" href="#">Activities</a></li>
-                <li>
-                  <hr class="dropdown-divider">
-                </li>
-                <li><a class="dropdown-item" href="contactus.html">Contact Us</a></li>
-              </ul>
-            </li>
-          </ul>
-          <form class="d-flex mt-3" role="search">
-            <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-            <button class="btn btn-outline-success" type="submit">Search</button>
-          </form>
-        </div>
-      </div>
-    </div>
-  </nav>
-
-
-  <div class="login-container">
-    <!-- <h1 id="welcome-msg" class="display-5 fw-bold">Welcome to Farmify</h1>
-    <p class="col-md-8 fs-4">Where we bring farms to you!</p><br /><br /> -->
+  <div class="title" class="center">
+    <img src="/img/Logo.png" alt="logo" width="250" height="250">
   </div>
-  <div class="login">
-  <h1>Login</h1>
-    <form action="/login" method="POST">
+
+  <div class="login bg-light">
+    <br>
+    <form action="/login" method="POST" class="index-form center">
+      <h1>Login</h1>
       <input type="email" name="email" placeholder="Email">
       <input type="password" name="password" placeholder="Password">
-      <button type="submit">Login</button>
-    </form>
-    </div>
-<%- include("templates/end") %>
+      <button type="submit" class="index-btn">Login</button>
+    </form> 
+    <br>
+  </div>
+  <%- include("templates/end") %>
