--- a/styles/main.css
+++ b/styles/main.css
@@ -1,8 +1,3 @@
-body {
-    display: grid;
-    grid-area: auto;
-}
-
 /* nav bar */
 nav {
     width: 100%;
@@ -209,21 +204,15 @@ td {
 }
 
 /* task container */
-.task-list-container {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
+ul {
+    border: 2px solid rgb(3, 3, 3);
+    padding: .2em;
+    list-style-type: none;
 }
 
-.task-entry {
-    width: 80%;
-    min-height: 100px;
-    background-color: #f9f9f9;
-    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-    padding: 15px;
-    margin-bottom: 20px;
-    border-radius: 5px;
+.task-item {
+    color: green;
+    font-size: 15px;
 }
 
 /* footer */
