changed tasklist part in main.ejs

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -80,7 +80,7 @@
     </div>
   </div>
 
-  <!-- task container -->
+  <ul><!-- TASKS_PLACEHOLDER --></ul>
   
   <br><a href="/logout"><button class="btn btn-secondary float-right" type="submit">Log Out</button></a>
   
