--- a/views/main.ejs
+++ b/views/main.ejs
@@ -25,8 +25,8 @@
 
   <!-- Welcome messsge -->
   <div class="px-4 py-5 my-5 text-center">
-    <h4 style="margin-bottom: 5%;" class="display-4">Are you ready to tackle the day,
-      <span id="name-goes-here"><%= username %></span>?
+    <h4 style="margin-bottom: 5%;" class="display-4">Are you ready to tackle the day, <!-- USERNAME_PLACEHOLDER -->?
+      <!-- <span id="name-goes-here"><%= username %></span>? -->
     </h4>
     <div class="col-lg-6 mx-auto">
       <div class="navText">
