display a deafult image for new users / convert main.html to main.ejs / leaderboard is now functional - get user data from DB / sort them in score up to 5 people

--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,18 +1,21 @@
-  <!-- Footer -->
-  <footer>
-    <a>.......................................................................................................................................</a>
-    <a href="index.html">
-      <input type="image" class="footerButton" src="../img/23-user-group.svg">
-    </a>
-    <a href="/main">
-      <input type="image" class="footerButton" src="../img/35-home-general.svg">
-    </a>
-    <a href="index.html">
-      <input type="image" class="footerButton" src="../img/22-user.svg">
-    </a>
-  </footer>
+    <!-- Footer -->
+    <footer>
+      <a href="index.html">
+        <input type="image" class="footerButton" src="../../img/23-user-group.svg">
+      </a>
+      <a href="index.html">
+        <input type="image" class="footerButton" src="../../img/35-home-general.svg">
+      </a>
+      <a href="index.html">
+        <input type="image" class="footerButton" src="../../img/22-user.svg">
+      </a>
+    </footer>
 
-  <!-- Link to scripts of our own -->
+    <!-- Link to scripts of our own -->
+    <!-- <script src="/scripts/firebaseAPI_TEAMBBY29.js"></script> -->
+    <!-- <script src="/scripts/authentication.js"></script> -->
+    <!-- <script src="/scripts/main.js"></script> -->
+    <!-- <script src="/scripts/skeleton.js"></script> -->
 
 </body>
 
