--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -31,8 +31,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
   <!-- Link to styles of our own -->
-  <link rel="stylesheet" type="text/css" href="/styles/style.css" text="">
+  <link rel="stylesheet" href="../../styles/style.css">
 
+  <!-- <style sheet> -->
+  <link rel="stylesheet" type="text/css" href="../../styles/main.css">
+
+  
 </head>
-
-<body>
