Made Profile Page

--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -6,7 +6,7 @@
   <a href="main">
     <input type="image" class="footerButton" src="../../img/35-home-general.svg">
   </a>
-  <a href="index.html">
+  <a href="profile">
     <input type="image" class="footerButton" src="../../img/22-user.svg">
   </a>
 </footer>
