Added total and current points, and shop page.

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -8,6 +8,9 @@
     <a href="dietTasks">
       <input type="image" class="navButton" src="../img/DietButton.png">
     </a>
+    <a href="shop">
+      <input type="image" class="navButton" src="../img/shop.png" style="width:100px;">
+    </a>
   </nav>
 
 
