display error message when user type the existing name or email

--- a/views/templates/header2.ejs
+++ b/views/templates/header2.ejs
@@ -18,15 +18,17 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
 
+  <!-- favicon -->
+  <link rel="icon" href="/img/fitup2.png">
+
   <!-- Other libraries CSS CDN go here -->
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet" />
 
   <!-- Other Libraries JS CDN go here -->
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
-  <!-- Google Icons-->
-
   <!-- Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
 
