--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -18,6 +18,9 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous">
     </script>
 
+  <!-- favicon -->
+  <link rel="icon" href="/img/fitup2.png">
+
   <!-- Other libraries CSS CDN go here -->
   <link href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap" rel="stylesheet" />
 
@@ -29,12 +32,3 @@
   <!-- Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-
-  <!-- Link to styles of our own -->
-  <link rel="stylesheet" href="../../styles/style.css">
-
-  <!-- <style sheet> -->
-  <link rel="stylesheet" type="text/css" href="../../styles/main.css">
-
-  
-</head>
