Changed some styling

--- a/views/main.ejs
+++ b/views/main.ejs
@@ -1,4 +1,9 @@
-<%- include("templates/header") %>
+<%- include("templates/header2") %>
+  <link rel="stylesheet" type="text/css" href="/styles/main.css" text="">
+  <link rel="stylesheet" href="../../styles/style.css">
+
+  </head>
+
   <!-- nav bar -->
   <nav>
     <br>
