add favicon, fix HTML invalidated code(after </div>, applied CSS for each code blocks, merged header.ejs, fixed css issue from leaderboard, moved profileImg holder from main.ejs to profile.ejs, mitigated the process of uploading images, display success message after uploading profile picture

--- a/views/changeEmail.ejs
+++ b/views/changeEmail.ejs
@@ -1,4 +1,6 @@
 <%- include("templates/header") %>
+</head>
+
     <div class="title" class="center">
         <img src="/img/Logo.png" alt="logo" width="250" height="250">
     </div>
@@ -12,4 +14,4 @@
         </form>
         <br>
     </div>
-    <%- include("templates/end") %>
+<%- include("templates/end") %>
