--- a/views/dietTasks.ejs
+++ b/views/dietTasks.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/header2") %>
+<%- include("templates/header") %>
     <link rel="stylesheet" type="text/css" href="/styles/tasks.css" text="">
 
     </head>
