--- a/views/shop.ejs
+++ b/views/shop.ejs
@@ -1,4 +1,6 @@
 <%- include("templates/header") %>
+</head>
+
 <h1>Shop</h1>
 <h2>Spending Points: <%= currentPoints %></h2>
 <ol class="shopitems">
