--- a/styles/main.css
+++ b/styles/main.css
@@ -1,9 +1,3 @@
-body {
-    display: grid;
-    grid-area: auto;
-}
-
-
 nav {
     width: 100%;
     /* position: fixed; */
@@ -193,8 +187,8 @@ td {
 }
 
 .ribbon {
-    width: 41.5rem;
-    height: 5.5rem;
+    width: 100%;
+    height: 6.3rem;
     top: -0.5rem;
     background-color: #353741;
     position: absolute;
@@ -202,6 +196,38 @@ td {
     -webkit-box-shadow: 0px 15px 11px -6px #7a7a7d;
     box-shadow: 0px 15px 11px -6px #7a7a7d;
 }
+
+/* @media (max-width: 3000px) {
+    .ribbon {
+        width: 100%;
+        height: 12vh;
+        max-height: 7rem; 
+        -webkit-box-shadow: 0px 1rem 1rem -0.5rem #7a7a7d;
+        box-shadow: 0px 1rem 1rem -0.5rem #7a7a7d;
+    }
+}
+
+
+
+@media (max-width: 768px) {
+    .ribbon {
+        width: 95%;
+        height: 12vh;
+        max-height: 7rem; 
+        -webkit-box-shadow: 0px 1rem 1rem -0.5rem #7a7a7d;
+        box-shadow: 0px 1rem 1rem -0.5rem #7a7a7d;
+    }
+}
+
+@media (max-width: 480px) {
+    .ribbon {
+        width: 100%; 
+        height: 15vh;
+        max-height: 6rem; 
+        -webkit-box-shadow: 0px 0.5rem 0.5rem -0.3rem #7a7a7d;
+        box-shadow: 0px 0.5rem 0.5rem -0.3rem #7a7a7d;
+    }
+} */
 
 .ribbon::before {
     content: "";
@@ -261,6 +287,7 @@ ul {
 }
 
 .task-item {
+    text-align: center;
     color: green;
     font-size: 15px;
 }
