--- a/views/changePassword.ejs
+++ b/views/changePassword.ejs
@@ -1,4 +1,6 @@
 <%- include("templates/header") %>
+</head>
+
     <div class="title" class="center">
         <img src="/img/Logo.png" alt="logo" width="250" height="250">
     </div>
@@ -12,4 +14,4 @@
         </form>
         <br>
     </div>
-    <%- include("templates/end") %>
+<%- include("templates/end") %>
