--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,4 +1,6 @@
 <%- include("templates/header") %>
+</head>
+
   <div class="title" class="center">
     <img src="/img/Logo.png" alt="logo" width="250" height="250">
   </div>
@@ -13,4 +15,5 @@
     </form> 
     <br>
   </div>
+
   <%- include("templates/end") %>
