--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,4 +1,4 @@
-<%- include("templates/header2") %>
+<%- include("templates/header") %>
     <link rel="stylesheet" type="text/css" href="/styles/profile.css" text="">
 
     </head>
@@ -19,8 +19,15 @@
             </div>
         </div>
 
+        <!-- Success Message -->
+        <% if (uploadSuccess) { %>
+            <div id="success-message" class="alert alert-success" style="position: fixed; top: 20px; right: 20px; z-index: 9999;">
+                Image uploaded successfully!
+            </div>
+        <% } %>
+            
 
-        <div style="margin-top: 70px;">
+        <!-- <div style="margin-top: 70px;">
             <div class="d-flex justify-content-center">
                 <a href="/" style="text-decoration : none;">
                     <h1>
@@ -29,35 +36,64 @@
                 </a>
 
             </div>
+        </div> -->
 
-            <div class="d-flex justify-content-center">
-                <a href="/" style="text-decoration : none;">
-                    <h1><img src="./img/default-avatar.jpg" style="height: 1.5em;margin-bottom: 5px;">Change Profile
-                        Image
-                    </h1>
-                </a>
 
-            </div>
-
-            <div class="d-flex justify-content-center">
-                <a href="/" style="text-decoration : none;">
-                    <h1><img src="./img/Trophy icon.png" style="height: 1.5em;margin-bottom: 5px;">Rank Progress</h1>
-                </a>
-            </div>
-
-            <div class="d-flex justify-content-center">
-                <a href="/changeEmail" style="text-decoration : none;">
-                    <h1>Change Email</h1>
-                </a>
-            </div>
-
-            <div class="d-flex justify-content-center">
-                <a href="/changePassword" style="text-decoration : none;">
-                    <h1>Change Password</h1>
-                </a>
-            </div>
-
+        <div class="d-flex justify-content-center mt-5">
+            <a href="#" id="profileImageLink" style="text-decoration: none;">
+              <h1>
+                <img src="/img/default-avatar.jpg" style="height: 1.5em; margin-bottom: 5px;">
+                Change Profile Image
+              </h1>
+            </a>
+            <form id="profileUploadForm" action="/profile-upload" method="post" enctype="multipart/form-data" class="d-none">
+              <input type="file" name="image" id="profileImageInput" required style="display: none;">
+            </form>
+          </div>
         </div>
+
+
+        <div class="d-flex justify-content-center mt-5">
+            <a href="/" style="text-decoration : none;">
+                <h1><img src="./img/Trophy icon.png" style="height: 1.5em;margin-bottom: 5px;">Rank Progress</h1>
+            </a>
+        </div>
+
+        <div class="d-flex justify-content-center mt-5">
+            <a href="/changeEmail" style="text-decoration : none;">
+                <h1>Change Email</h1>
+            </a>
+        </div>
+
+        <div class="d-flex justify-content-center mt-5">
+            <a href="/changePassword" style="text-decoration : none;">
+                <h1>Change Password</h1>
+            </a>
+        </div>
+
+
+        <!-- one click event for uploading image / mitigating the steps -->
+        <script>
+            document.getElementById('profileImageLink').addEventListener('click', function (e) {
+                e.preventDefault();
+                document.getElementById('profileImageInput').click();
+            });
+    
+            document.getElementById('profileImageInput').addEventListener('change', function () {
+                document.getElementById('profileUploadForm').submit();
+            });
+    
+            document.addEventListener('DOMContentLoaded', () => {
+                const successMessageDiv = document.getElementById('success-message');
+                if (successMessageDiv) {
+                    // Hide the success message after 3 seconds
+                    setTimeout(() => {
+                        successMessageDiv.style.display = 'none';
+                    }, 3000);
+                }
+            });
+        </script>
+
     </body>
 
     <%- include("templates/footer") %>
