--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -1,4 +1,6 @@
-<%- include("templates/header2") %>
+<%- include("templates/header") %>
+</head>
+
   <div class="title" class="center">
     <img src="/img/Logo.png" alt="logo" width="250" height="250">
   </div>
