--- a/views/templates/footer.ejs
+++ b/views/templates/footer.ejs
@@ -1,15 +1,17 @@
 <!-- Footer -->
-<footer>
-  <a href="index.html">
-    <input type="image" class="footerButton" src="../../img/23-user-group.svg">
-  </a>
-  <a href="main">
-    <input type="image" class="footerButton" src="../../img/35-home-general.svg">
-  </a>
-  <a href="profile">
-    <input type="image" class="footerButton" src="../../img/22-user.svg">
-  </a>
-</footer>
+<div class="px-4 py-5 my-5 text-center">
+  <footer>
+    <a href="index.html">
+      <input type="image" class="footerButton" src="../../img/23-user-group.svg">
+    </a>
+    <a href="main">
+      <input type="image" class="footerButton" src="../../img/35-home-general.svg">
+    </a>
+    <a href="profile">
+      <input type="image" class="footerButton" src="../../img/22-user.svg">
+    </a>
+  </footer>
+</div>
 
 <!-- Link to scripts of our own -->
 <!-- <script src="/scripts/firebaseAPI_TEAMBBY29.js"></script> -->
