--- a/views/templates/header.ejs
+++ b/views/templates/header.ejs
@@ -27,8 +27,10 @@
   <!-- Other Libraries JS CDN go here -->
   <script src="https://unpkg.com/@phosphor-icons/web"></script>
 
-  <!-- Google Icons-->
-
   <!-- Google Fonts-->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+  <!-- CSS -->
+  <link rel="stylesheet" type="text/css" href="../../styles/style.css">
+  <link rel="stylesheet" type="text/css" href="../../styles/main.css" text="">
