Added password reset and token creation

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -12,5 +12,8 @@
       <button type="submit" class="index-btn">Login</button>
     </form> 
     <br>
+    <form class="index-form center">
+        <a href="/reset-email">Reset password</a>
+    </form>
   </div>
   <%- include("templates/end") %>
