--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -1,7 +1,13 @@
-<h1>Reset Password</h1>
-    <form action="/reset-password" method="POST">
-        <input type="hidden" name="token" value="<%= token %>"> <!-- Include the session token -->
-        <label for="newPassword">Enter new password:</label>
-        <input type="password" id="newPassword" name="newPassword" required>
-        <button type="submit">Reset Password</button>
+<%- include("templates/header") %>
+ <h1>Password Reset</h1>
+    <form action="/reset-password" method="POST" class="index-form center bg-light">
+        <input type="hidden" name="token" value="<%= token %>">
+        <label for="newPassword" class="center">New Password:</label>
+        <input class="center" type="password" id="newPassword" name="newPassword" required>
+        <br><br>
+        <label for="confirmNewPassword" class="center">Confirm New Password:</label>
+        <input class="center" type="password" id="confirmNewPassword" name="confirmNewPassword" required>
+        <br>
+        <button type="submit" class="index-btn">Reset Password</button>
     </form>
+  <%- include("templates/end") %>
